--- a/picture.qrc
+++ b/picture.qrc
@@ -5,5 +5,6 @@
         <file>background.png</file>
         <file>refresh.png</file>
         <file>red_led.png</file>
+        <file>login_background.png</file>
     </qresource>
 </RCC>
