增加了节点链表，但是还并未应用

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -342,7 +342,7 @@
       <x>680</x>
       <y>190</y>
       <width>211</width>
-      <height>211</height>
+      <height>181</height>
      </rect>
     </property>
     <property name="title">
@@ -478,6 +478,20 @@
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="pushButton_6">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>390</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>注册终端</string>
+    </property>
+   </widget>
+   <zorder>layoutWidget</zorder>
    <zorder>groupBox</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
