增加了输液提醒的功能——alarm

--- a/picture.qrc
+++ b/picture.qrc
@@ -6,5 +6,7 @@
         <file>refresh.png</file>
         <file>red_led.png</file>
         <file>login_background.png</file>
+        <file>alarm.png</file>
+        <file>gray_led.png</file>
     </qresource>
 </RCC>
