--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -321,7 +321,7 @@
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>120</x>
        <y>70</y>
        <width>75</width>
        <height>23</height>
@@ -342,19 +342,6 @@
      </property>
      <property name="text">
       <string>扫描</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_9">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>54</width>
-       <height>12</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>终端：</string>
      </property>
     </widget>
     <widget class="QComboBox" name="comboBox_3">
@@ -435,13 +422,13 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>160</y>
+       <y>150</y>
        <width>21</width>
        <height>21</height>
       </rect>
      </property>
      <property name="text">
-      <string>a</string>
+      <string> </string>
      </property>
      <property name="textFormat">
       <enum>Qt::RichText</enum>
@@ -461,6 +448,19 @@
      <string>注册终端</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>390</y>
+      <width>32</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string> </string>
+    </property>
+   </widget>
    <zorder>pushButton_6</zorder>
    <zorder>groupBox</zorder>
    <zorder>layoutWidget</zorder>
@@ -468,6 +468,7 @@
    <zorder>qwtPlot_2</zorder>
    <zorder>tableWidget</zorder>
    <zorder>groupBox_2</zorder>
+   <zorder>label_9</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
