--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -286,27 +286,27 @@
       </rect>
      </property>
      <property name="text">
-      <string>激活CCD</string>
+      <string>激活终端</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>150</x>
+       <x>40</x>
        <y>30</y>
-       <width>41</width>
+       <width>151</width>
        <height>23</height>
       </rect>
      </property>
      <property name="text">
-      <string>扫描</string>
+      <string>扫描终端</string>
      </property>
     </widget>
     <widget class="QComboBox" name="comboBox_3">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>30</y>
+       <x>40</x>
+       <y>70</y>
        <width>69</width>
        <height>22</height>
       </rect>
@@ -432,7 +432,7 @@
      <string>液位高度：</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>630</x>
