--- a/_login.ui
+++ b/_login.ui
@@ -65,20 +65,30 @@
     <string>密 码：</string>
    </property>
   </widget>
-  <widget class="QDialogButtonBox" name="buttonBox">
+  <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>200</y>
-     <width>156</width>
+     <y>190</y>
+     <width>75</width>
      <height>23</height>
     </rect>
    </property>
-   <property name="focusPolicy">
-    <enum>Qt::TabFocus</enum>
+   <property name="text">
+    <string>登录</string>
    </property>
-   <property name="standardButtons">
-    <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>190</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>退出</string>
    </property>
   </widget>
  </widget>
