--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -498,6 +498,19 @@
      </item>
     </layout>
    </widget>
+   <widget class="QLabel" name="label_user">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>当前登录:</string>
+    </property>
+   </widget>
    <zorder>pushButton_6</zorder>
    <zorder>groupBox</zorder>
    <zorder>layoutWidget</zorder>
@@ -507,6 +520,7 @@
    <zorder>groupBox_2</zorder>
    <zorder>label_9</zorder>
    <zorder>label_10</zorder>
+   <zorder>label_user</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
