--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>933</width>
-    <height>700</height>
+    <width>1346</width>
+    <height>728</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,18 +18,18 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>70</y>
       <width>621</width>
-      <height>341</height>
+      <height>311</height>
      </rect>
     </property>
    </widget>
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>20</y>
-      <width>211</width>
+      <x>670</x>
+      <y>89</y>
+      <width>181</width>
       <height>151</height>
      </rect>
     </property>
@@ -95,7 +95,7 @@
      <property name="geometry">
       <rect>
        <x>11</x>
-       <y>49</y>
+       <y>60</y>
        <width>54</width>
        <height>16</height>
       </rect>
@@ -108,7 +108,7 @@
      <property name="geometry">
       <rect>
        <x>77</x>
-       <y>49</y>
+       <y>60</y>
        <width>61</width>
        <height>20</height>
       </rect>
@@ -144,9 +144,9 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>740</x>
-      <y>430</y>
-      <width>161</width>
+      <x>1120</x>
+      <y>79</y>
+      <width>204</width>
       <height>221</height>
      </rect>
     </property>
@@ -197,10 +197,10 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>410</y>
+      <x>780</x>
+      <y>400</y>
       <width>561</width>
-      <height>231</height>
+      <height>301</height>
      </rect>
     </property>
     <property name="focusPolicy">
@@ -267,10 +267,10 @@
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>190</y>
+      <x>890</x>
+      <y>89</y>
       <width>211</width>
-      <height>181</height>
+      <height>211</height>
      </rect>
     </property>
     <property name="title">
@@ -292,9 +292,9 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>110</x>
        <y>30</y>
-       <width>151</width>
+       <width>81</width>
        <height>23</height>
       </rect>
      </property>
@@ -316,7 +316,7 @@
      <property name="geometry">
       <rect>
        <x>140</x>
-       <y>120</y>
+       <y>130</y>
        <width>20</width>
        <height>20</height>
       </rect>
@@ -329,7 +329,7 @@
      <property name="geometry">
       <rect>
        <x>80</x>
-       <y>120</y>
+       <y>130</y>
        <width>40</width>
        <height>20</height>
       </rect>
@@ -354,7 +354,7 @@
      <property name="geometry">
       <rect>
        <x>13</x>
-       <y>124</y>
+       <y>134</y>
        <width>60</width>
        <height>16</height>
       </rect>
@@ -367,7 +367,7 @@
      <property name="geometry">
       <rect>
        <x>120</x>
-       <y>150</y>
+       <y>160</y>
        <width>75</width>
        <height>23</height>
       </rect>
@@ -380,7 +380,7 @@
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>150</y>
+       <y>130</y>
        <width>21</width>
        <height>21</height>
       </rect>
@@ -396,8 +396,8 @@
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>800</x>
-      <y>390</y>
+      <x>780</x>
+      <y>279</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -409,8 +409,8 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>380</y>
+      <x>990</x>
+      <y>259</y>
       <width>32</width>
       <height>32</height>
      </rect>
@@ -422,23 +422,23 @@
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>680</x>
       <y>410</y>
       <width>54</width>
       <height>12</height>
      </rect>
     </property>
     <property name="text">
-     <string>液位高度：</string>
+     <string>液位高度</string>
     </property>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>630</x>
+      <x>660</x>
       <y>430</y>
-      <width>81</width>
-      <height>221</height>
+      <width>91</width>
+      <height>281</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -511,6 +511,29 @@
      <string>当前登录:</string>
     </property>
    </widget>
+   <widget class="QwtPlot" name="qwtPlot_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>420</y>
+      <width>621</width>
+      <height>291</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>10</y>
+      <width>331</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:22pt; color:#008000;&quot;&gt;智慧医疗输液监测平台&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;  </string>
+    </property>
+   </widget>
    <zorder>pushButton_6</zorder>
    <zorder>groupBox</zorder>
    <zorder>layoutWidget</zorder>
@@ -521,6 +544,13 @@
    <zorder>label_9</zorder>
    <zorder>label_10</zorder>
    <zorder>label_user</zorder>
+   <zorder>qwtPlot_3</zorder>
+   <zorder>textEdit_2</zorder>
+   <zorder>textEdit_2</zorder>
+   <zorder>textEdit_2</zorder>
+   <zorder>Thermo</zorder>
+   <zorder></zorder>
+   <zorder>label_11</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
